<resources>
    <string name="app_name">Cool Weather APP</string>
    <string name="weather_image">Weather Image</string>
    <string name="update">UPDATE</string>
    <string name="latitude">Latitude</string>
    <string name="latitude_string">50.53</string>
    <string name="longitude">Longitude</string>
    <string name="longitude_string">49.62</string>
    <string name="sea_level_pressure">Sea Level Pressure</string>
    <string name="sea_level_pressure_string">1026.4 hPa</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_direction_string">214</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_speed_string">13.0 km/h</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_string">15.9 ºC</string>
    <string name="time">Time</string>
    <string name="time_string">2023-03-10T 12:00</string>
</resources>